--- a/assets/scss/variables/_variable-bootstrap.scss
+++ b/assets/scss/variables/_variable-bootstrap.scss
@@ -87,7 +87,7 @@ $custom-file-width:           14rem !default;
 $custom-file-text:            (en: 'Choose file...') !default;
 
 $form-check-inline-margin-x:  $spacer-sm !default;
-$form-check-input-margin-x:   $spacer-xs !default;
+$form-check-input-gutter:     1.25rem !default;
 
 $form-feedback-invalid-color: map-get(theme-color(danger), color) !default;
 $form-feedback-valid-color:   map-get(theme-color(success), color) !default;
